Fixed email address. added a bit more spacing between cIcon for mobile.:

--- a/style.css
+++ b/style.css
@@ -211,6 +211,7 @@ li a:hover{
   color: #3C4858;
 }
 .cIcon {
+  margin: 20px;
   padding: 5px;
   font-size: 70px;
   color: #474747;
